fix: adding mask in form

--- a/frontend/src/app/components/auth/auth.html
+++ b/frontend/src/app/components/auth/auth.html
@@ -37,4 +37,8 @@
             </default-button>
         </div>
     </div>
+
+    @if (showToast) {
+        <app-toast [title]="toastParams.title" [content]="toastParams.content" [toastType]="toastParams.type"></app-toast>
+    }
 </div>
