--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -3,6 +3,7 @@ $primary-accent: #3C9DFF;
 $success: #2ECC71;
 $warning: #F1C40F;
 $critical: #E74C3C;
+$info: $primary-accent;
 $graphite: #1E1E1E;
 $dark-bg: #1E1E1E;
 $gray: #2F2F2F;
