--- a/frontend/src/app/components/ui/toast/toast.html
+++ b/frontend/src/app/components/ui/toast/toast.html
@@ -1,23 +1,17 @@
-
-<div class="toast-container {{toastType}}" >
+@if (isVisible) {
+  <div class="toast-container {{ toastType }}">
     <div class="toast-header">
-        <span class="toast-icon">
-            @switch (toastType) {
-                @case ('success') {
-                    V
-                } @case ('warn') {
-                    Y
-                } @case ('info') {
-                    i
-                } @case('error'){
-                    X
-                }
-            }
-        </span>
-        <h6>{{title}}</h6>
+      <span class="toast-icon">
+        @switch (toastType) {
+          @case ('success') { ✔ }
+          @case ('warn') { ⚠ }
+          @case ('info') { ℹ }
+          @case ('error') { ✖ }
+        }
+      </span>
+      <h6>{{ title }}</h6>
     </div>
-    <div class="toast-content">
-        <p>{{content}}</p>
-    </div>
-</div>
 
+    <p>{{ content }}</p>
+  </div>
+}
